--- a/doc/chapter1.tex
+++ b/doc/chapter1.tex
@@ -1,27 +1,13 @@
-%%%% This template is customised for edited volumes published with Cambridge
-%%%% University Press. It should be used in conjunction with the other files
-%%%% included in cup_volumes.zip available from
-%%%% http://www.michaelcuffaro.com/latex.shtml
-%%%%
-%%%% Note: Lorem ipsum text generated via http://www.lipsum.com/
-%%%%
-%%%% It is freely available for you to use.
-%%%%
-%%%% Copyright 2017, Michael Cuffaro.
-
-
-%\renewcommand{\chapterauthor}{Nan Tucket}
-%\renewcommand{\shortchaptertitle}{The greatest chapter on Earth}
 \chapter{Reversible Logic Synthesis}
 \label{ch:part1_chapter1}
 
-\settocdepth{section}
-\cftaddtitleline{toc}{section}{\emph{\chapterauthor}}{}
-\settocdepth{chapter}
+%\settocdepth{section}
+%\cftaddtitleline{toc}{section}{\emph{\chapterauthor}}{}
+%\settocdepth{chapter}
 
 Reversible logic plays a vital  role  at present time and it has different areas for its applications, namely Low Power CMOS, Quantum Computing, Nanotechnology, Cryptography,
 Optical Computing, DNA  Computing, Digital Signal  Processing (DSP), Quantum-dot Cellular Automata (QCA),  Digital Communications, and Computer Graphics. It is not possible to realize quantum computing without implementation of reversible logic. The main purposes of designing reversible logic circuits are to decrease quantum cost, depth of the circuits, and the number of garbage outputs.%
-This chapter explains the basic reversible logic gates for more complex system which may have reversible circuits as a primitive component and can execute complicated operations using quantum computers. The reversible circuits form the basic building block of quantum computers as all quantum operations are reversible. This chapter presents the information related to the primitive reversible gates and helps researches in designing higher complex computing circuits using reversible gates.
+This chapter explains the basic reversible logic gates for more complex system which may have reversible circuits as a primitive component and can execute complicated operations using quantum computers. The reversible circuits form the basic building block of quantum computers as all quantum operations are reversible. This chapter presents the information related to the primitive reversible gates and helps researchers in designing higher complex computing circuits using reversible gates.
  
  
 \section{Reversible Logic}
@@ -45,13 +31,18 @@ Reversible logic has unique mapping between input and output bit pattern. A unit
 A reversible circuit is such a circuit in which the number of input and the number of output is equal and there is one-to-one mapping between input and output vectors.}
 \end{property}
  
-Let us consider the gate shown in Figure~\ref{fig:p1_c1_fig1}. According to the definition, the gate is a reversible gate, because it has \textit{k} number of inputs and k number of outputs and the gate is known as $k \times k$ Reversible Gate. Without the NOT gate, classical logic gates are called irreversible, since they cannot determine the input vector states from the output vector states uniquely.
+Let us consider the gate shown in Figure~\ref{fig:p1_c1_fig1}. According to the definition, the gate is a reversible gate, because it has \textit{k} number of inputs and \textit{k} number of outputs and the gate is known as $k \times k$ Reversible Gate. Without the NOT gate, classical logic gates are called irreversible, since they cannot determine the input vector states from the output vector states uniquely.
 \begin{figure}[H]
 	\centering
 	\includegraphics[width=8cm, height=5cm]{chapters/part1/chapter1/fig1.eps}
 	\caption{A $k \times k$ Reversible Gate}
 	\label{fig:p1_c1_fig1}
 \end{figure}
+
+
+
+
+
 
 \begin{example}\textnormal{
 	There can be any number of dimensions for a reversible gate, but lower dimension is always preferable for designing efficient circuits. The popular reversible gates, Feynman Gate (FG), Toffoli Gate (TG), Peres Gate (PG), Fredkin Gate (FRG), Feynman Double Gate (F2G) and New Fault Tolerant (NFT), are shown in Figure~\ref{fig:p1_c1_fig2}}
@@ -102,20 +93,19 @@ Let us consider the gate shown in Figure~\ref{fig:p1_c1_fig1}. According to the 
 \section{Garbage Outputs}
 
 The  output (outputs)  of  a reversible  gate which is  (are)  not used as input to other gate or  the  output  (outputs) which is (are) not treated as a primary output is  (are) called garbage output (outputs). The unutilized outputs 
-from a gate are called garbage outputs. Heavy price is paid
-oﬀ for every garbage output. So, the less number of garbage output  is desired  for any circuit design.
+from a gate are called garbage outputs. Heavy price is paid for every garbage output. So, the less number of garbage output  is desired  for any circuit design.
 
 
 %Every gate's output that is not used as input to other gate or as a primary output is called garbage output. The unutilized outputs from a gate are called garbage. Heavy price is paid off for every garbage output. So, it should always keep in mind that, the less number of garbage is quite good for any circuit design.
 
 \begin{example}\textnormal{
-	When a Feynman gate (FG) is used for Ex-OR (Exclusive-OR) operation of two inputs, extra one output is generated at the output part of the FG in addition to the Ex-OR output. This additional output is known as garbage output. In Figure~\ref{fig:p1_c1_fig3}, the garbage output of a gate is shown. Here, A is the garbage output.}
+	When a Feynman gate (FG) is used for Ex-OR (Exclusive-OR) operation of two inputs, extra one output is generated at the output part of the FG in addition to the Ex-OR output. This additional output is known as garbage output. In Figure~\ref{fig:p1_c1_fig3}, the garbage output of a gate is shown. Here, \textit{A} is the garbage output.}
 \end{example}
 
 \begin{figure}[H]
 	\centering
 	\includegraphics[width=0.4\textwidth]{chapters/part1/chapter1/fig3.eps}
-	\caption{A $k \times k$ Reversible Gate}
+	\caption{Reversible Feynman Gate}
 	\label{fig:p1_c1_fig3}
 \end{figure}
 
@@ -123,20 +113,17 @@ oﬀ for every garbage output. So, the less number of garbage output  is desired
 Constant inputs are the inputs of a reversible gate (or circuit) that are either set to 0 or 1.
 
 \begin{example}\textnormal{
-	If the complement of the input A from Figure~\ref{fig:p1_c1_fig3} is needed, then \textit{B} is set to 1 and $Q = A$.}
+	If the complement of the input \textit{A} from Figure~\ref{fig:p1_c1_fig3} is needed, then \textit{B} is set to 1 and $Q = A$.}
 \end{example}
 
 \section{Quantum Cost}
-%Quantum theory is a gigantic research field deeply related to crucial applications as DNA technologies, nanotechnologies and optical computing etc. Reversible quantum logic plays an important role in quantum computing.
+The quantum cost of a circuit is the total number of $2 \times 2$ quantum primitives which are used to realize corresponding quantum circuit. Basically, the quantum primitives are matrix operations, which are applied on qubits state.%}
 
-%\begin{property}\textnormal{
-	The quantum cost of a circuit is the total number of $2 \times 2$ quantum primitives are used to realize corresponding quantum circuit. Basically, the quantum primitives are matrix operations, which are applied on qubits state.%}
-%\end{property} 
 
 
 
 \begin{example}\textnormal{
-The quantum realization of reversible Fredkin (FRG) gate is shown in  Figure~\ref{fig:p1_c1_fig5_1}. Each quantum Ex-OR gate and quantum V or V$^+$ gate requires 1 (one) quantum cost. The reversible FRG gate has four quantum Ex-OR gates, two quantum V gates and one quantum V$^+$ gate. So, the quantum cost of reversible FRG gate seems 7 (seven). But, we know if a quantum Ex-OR gate and a quantum V or  V$^+$ gate exists angularly (denoted by angular  box), then the  quantum cost treats as 1. From the figure, we see that, there exists two angular boxes and each angular box treats as 1 quantum cost. As a result, the total quantum cost of reversible FRG gate is 5 (five).}
+The quantum realization of reversible Fredkin (FRG) gate is shown in  Figure~\ref{fig:p1_c1_fig5_1}. Each quantum Ex-OR gate and quantum $V$ or $V^+$ gate requires 1 (one) quantum cost. The reversible FRG gate has four quantum Ex-OR gates, two quantum V gates and one quantum $V^+$ gate. So, the quantum cost of reversible FRG gate seems 7 (seven). But, we know if a quantum Ex-OR gate and a quantum $V$ or  $V^+$ gate exists angularly (denoted by angular  box), then the  quantum cost treats as 1. From the figure, we see that there exists two angular boxes and each angular box treats as 1 quantum cost. As a result, the total quantum cost of reversible FRG gate is 5 (five).}
 \end{example}
 
 \begin{figure}[H]
@@ -174,7 +161,7 @@ Power of a gate is defined by the energy. Energy of a basic quantum gate is 142.
 \end{figure}
 
 \section{Area}
-Area of a  reversible gate is defined by the feature size. This size varies according to the number of quantum gates. The size of the basic quantum gates ranges 50 A$^0$-300 A$^0$. The Angstrom (A$^0$) is a unit equal to 10-10 m (one ten-billionth of a meter) or 0.1 nm. So, the area of a reversible gate can be defined as follows: 
+The area of a  reversible gate is defined by the feature size. This size varies according to the number of quantum gates. The size of the basic quantum gates ranges from 50 A$^0$-300 A$^0$. The Angstrom (A$^0$) is a unit equal to 10-10 m (one ten-billionth of a meter) or 0.1 nm. So, the area of a reversible gate can be defined as follows: 
 
 \hspace{1.51cm}{\textit{Area = Number of Quantum Gates $\times$  Size of  a Basic Quantum Gate}}
 
@@ -246,10 +233,10 @@ Fan-out is a term that defines the maximum number of inputs in which the output 
 
 
 \section{Self-Reversible}
-A gate is said to be self-reversible, if its dual combination is the same as itself.
+A gate is said to be self-reversible if its dual combination is the same as itself.
 
 \begin{example}\textnormal{
-	n Figure~\ref{fig:p1_c1_fig4}, there are two Toffoli gates which are in the cascading form. If the outputs of the first Toffoli gate are fed to the input of the second Toffoli gate, then the output of the second Toffoli gate is equal to the input of the first Toffoli gate.
+	In Figure~\ref{fig:p1_c1_fig4}, there are two Toffoli gates which are in the cascading form. If the outputs of the first Toffoli gate are fed to the input of the second Toffoli gate, then the output of the second Toffoli gate is equal to the input of the first Toffoli gate.
 Here the outputs of first gate are \textit{P, Q} and \textit{R}, where \textit{P = A}, \textit{Q = B}, and \textit{R = AB} $\oplus$ \textit{C}. Then the outputs of second gate are \textit{X, V} and \textit{Z}, where \textit{X = A, Y = B} and \textit{Z = AB $\oplus$ AB$\oplus$ C = 0 $\oplus$ C = C.}}
 \end{example}
 
@@ -279,17 +266,17 @@ In a reversible circuit, correct output is found by applying correct input insta
 	
 \end{itemize}
 
-It is instructive to note that when \textit{B} is used as control input and \textit{B = 0}, both the outputs \textit{P = B} and \textit{Q = A}. This is, by controlling \textit{B}; copies of \textit{A} can easily create. This circuit can be easily used as a copying circuit.
+It is better to note that when \textit{B} is used as control input and \textit{B = 0}, both the outputs \textit{P = B} and \textit{Q = A}. By controlling \textit{B}; the copies of \textit{A} can be created. This circuit can be easily used as a copying circuit.
 
 \section{Area}
-The area of a logic circuit is the summation of individual areas of each gate of the circuit. Suppose a reversible circuit is consisted of \textit{n} reversible gates. Area of those \textit{n} gates are $a_1, a_2,\cdots, a_n$. Then by using above definition area, denoted by \textit{A}, of that circuit is,
+The area of a logic circuit is the summation of individual areas of each gate of the circuit. Suppose a reversible circuit consists of \textit{n} reversible gates. Area of those \textit{n} gates are $a_1, a_2,\cdots, a_n$. Then by using above definition area, denoted by \textit{A}, of that circuit is,
 \begin{equation*}
 A=\sum_{i=1}^{n}a_i
 \end{equation*}
 
-Given the above definition the area of a circuit can be calculated easily by obtaining area of each individual gate using CMOS 45 nm Open Cell Library and Synopsis Design Compiler. 
+The above definition the area of a circuit can be calculated easily by obtaining area of each individual gate using CMOS 45 nm Open Cell Library and Synopsis Design Compiler. 
 
-Area of a gate can also be defined by the feature size. This size varies according to the number of quantum gates. As the basic quantum gates are fabricated with quantum dots with the size ranges from several to tens of nanometers (10-9 m) in diameter, the size of the basic quantum gates ranges $50A^o-300A^o$. The Angstrom $(A^o)$ is a unit equal to 10-10m (one ten-billionth of a meter) or 0.1 nm. Its symbol is the Swedish letter $A^o$. Quantum circuits can be implemented with the basic quantum gates and the number of quantum gates depends on the number of basic quantum gates needed to implement it. So, the area of a gate can be defined as follows: Area = Number of Quantum Gates $\times$ Size of Basic Quantum Gates. 
+Area of a gate can also be defined by the feature size. This size varies according to the number of quantum gates. As the basic quantum gates are fabricated with quantum dots with the size ranges from several to tens of nanometers (10-9 m) in diameter, the size of the basic quantum gates ranges from $50A^0-300A^0$. The Angstrom $(A^o)$ is a unit equal to 10-10m (one ten-billionth of a meter) or 0.1 nm. Its symbol is the Swedish letter $A^o$. Quantum circuits can be implemented with the basic quantum gates and the number of quantum gates depends on the number of basic quantum gates needed to implement it. So, the area of a gate can be defined as follows: Area = Number of Quantum Gates $\times$ Size of Basic Quantum Gates. 
 
 \section{Design Constraints for Reversible Logic Circuits}
 The following are the important design constraints for reversible logic circuits.
@@ -306,13 +293,13 @@ The following are the important design constraints for reversible logic circuits
 \end{itemize}
 
 \section{Quantum Analysis of Different Reversible Logic Gates}
-Calculating Quantum Cost of reversible circuit is always an interesting one. Quantum circuits, DNA technologies, nano-technologies and optical computing are the most common applications of quantum theory. Every reversible gate can be calculated in terms of quantum cost and hence the reversible circuits can be measured in terms of quantum cost. Reducing the quantum cost from reversible circuit is always a challenging one and works are still going on in this area. In this section, the quantum equivalent diagram of some popular reversible gate is presented.
+Calculating Quantum Cost of reversible circuit is always an interesting one. Quantum circuits, DNA technologies, nano-technologies and optical computing are the most common applications of quantum theory. Every reversible gate can be calculated in terms of quantum cost and hence the reversible circuits can be measured in terms of quantum cost. Reducing the quantum cost from reversible circuit is always a challenging issue and research are still going on in this area. In this section, the quantum equivalent diagram of some popular reversible gate is presented.
 
 \begin{property}\textnormal{
-	The quantum cost of every 2$\times$2 gate is the same. It can be easily assumed that 1$\times$1 gate cost nothing, since it can be always included to arbitrary 2$\times$2 gate that precedes or follows it. Thus, in first approximation, every permutation quantum gate will be built from 1$\times$1 and 2$\times$2 quantum primitives and its cost calculated as a total sum of 2$\times$2 gates used. All gates of the form 2$\times$2 has equal quantum cost, and the cost is unity.}
+	The quantum cost of every 2$\times$2 gate is the same. It can be easily assumed that 1$\times$1 gate cost nothing, since it can be always included to arbitrary 2$\times$2 gate that precedes or follows it. Thus, in first approximation, every permutation quantum gate will be built from 1$\times$1 and 2$\times$2 quantum primitives and its cost is calculated as a total sum of 2$\times$2 gates used. All gates of the form 2$\times$2 has equal quantum cost, and the cost is unity.}
 \end{property}
 
-\subsection{Reversible NOT Gate(Feynman Gate)}
+\subsection{Reversible NOT Gate (Feynman Gate)}
 
 \begin{example}\textnormal{
 	A 2$\times$2 Feynman gate is also called CNOT. This gate is one through because it passes one of its inputs. Every linear reversible function can be built by using only 2$\times$2 Feynman gates and inverters. Since this is a 2$\times$2 gate, the quantum cost is 1. Quantum equivalent circuit of Feynman gate is shown in Figure~\ref{fig:p1_c1_fig5}.}
@@ -326,7 +313,7 @@ Calculating Quantum Cost of reversible circuit is always an interesting one. Qua
 \end{figure}
 
 \subsection{Toffoli Gate}
-	Figure~\ref{fig:p1_c1_fig6} shows the equivalent quantum realization of three input Toffoli gate. The cost of, the Toffoli gate is five 2 $\times$ 2 gates, or simply 5. In Figure~\ref{fig:p1_c1_fig6}, V is a square-root of NOT gate and V$^+$ is its hermitian. Thus VV$^+$ creates a unitary matrix of NOT gate and VV$^+$ = I (an identity matrix, describing just a quantum wire).
+	Figure~\ref{fig:p1_c1_fig6} shows the equivalent quantum realization of three input Toffoli gate. The cost of, the Toffoli gate is five 2 $\times$ 2 gates, or simply 5. In Figure~\ref{fig:p1_c1_fig6}, $V$ is a square-root of NOT gate and $V^+$ is its hermitian. Thus $V V^+$ creates a unitary matrix of NOT gate and $V V^+$ = I (an identity matrix, describing just a quantum wire).
 	
 	\begin{figure}[h]
 		\centering
@@ -356,5 +343,4 @@ The cost of Fredkin gate is the same as the cost of Toffoli gate. Toffoli gate i
 	\end{figure}
 
 \section{Summary}
-Maxwell's demon and Szilard's analysis of the demon first suggested the connection between a single degree of freedom (one bit) and a minimum quantity of entropy. In 1950s, this connection had been popularly interpreted to mean that computation must dissipate a corresponding minimum amount of energy during every elemental act of computation. Landauer later recognized that energy dissipation is only unavoidable when information is destroyed. Bennett and Toffoli first realized that a reversible computation, in which no information is destroyed, may dissipate arbitrarily small amounts of energy. The reversible circuits form the basic building block of quantum computers. This chapter presents some reversible gates. This chapter will help researches/designers in designing higher complex computing circuits using reversible gates. It can further be extended towards the digital design  development using reversible logic circuits which are helpful in quantum computing, low power CMOS, nanotechnology, cryptography, optical computing, DNA computing, digital signal processing (DSP), quantum dot cellular automata, communication, computer graphics.
-
+Maxwell's demon and Szilard's analysis of the demon at first suggested the connection between a single degree of freedom (one bit) and a minimum quantity of entropy. In 1950s, this connection had been popularly interpreted to mean that computation must dissipate a corresponding minimum amount of energy during every elemental act of computation. Landauer later recognized that energy dissipation is only unavoidable when information is destroyed. Bennett and Toffoli first realized that a reversible computation, in which no information is destroyed, may dissipate arbitrarily small amounts of energy. The reversible circuits form the basic building block of quantum computers. This chapter presents some reversible gates. This chapter will help researchers/designers in designing higher complex computing circuits using reversible gates. It can further be extended towards the digital design  development using reversible logic circuits which are helpful in quantum computing, low power CMOS, nanotechnology, cryptography, optical computing, DNA computing, digital signal processing (DSP), quantum dot cellular automata, communication, computer graphics.
